--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
 
+    <link rel="stylesheet" href="css/styles.css">
     <title>Hello, world!</title>
   </head>
   <body class="bg-dark">
@@ -22,7 +23,7 @@
                   <div class="input-group-prepend">
                     <div class="input-group-text">$</div>
                   </div>
-                  <input type="number" class="form-control" id="amount" placeholder="Loan Amount">
+                  <input type="number" class="form-control" id="amount" placeholder="Loan Amount" required>
                 </div>
               </div>
               <div class="form-group">
@@ -30,20 +31,20 @@
                   <div class="input-group-prepend">
                     <div class="input-group-text">%</div>
                   </div>
-                  <input type="number" class="form-control" id="interest" placeholder="Interest">
+                  <input type="number" class="form-control" id="interest" placeholder="Interest" required max="100">
                 </div>
               </div>
               <div class="form-group">
-                <input type="number" id="years" class="form-control" placeholder="Years To Repay">
+                <input type="number" id="years" class="form-control" placeholder="Years To Repay" required>
               </div>
               <div class="form-group">
                 <input type="submit" value="Calculate" class="btn btn-dark btn-block">
               </div>
             </form>
             <!-- Loader -->
-            <!-- <div id="loading">
+            <div id="loading">
               <img src="img/loading.gif">
-            </div> -->
+            </div>
             <!-- Results -->
             <div id="results" class="pt-3">
               <h5 class="pb-4">Results</h5>
@@ -82,6 +83,6 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
-    <script src="app.js"></script>
+    <script src="js/app.js"></script>
   </body>
 </html>
